kubernetes/infrastructure/flux-system/overlays/management-prd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux
  namespace: flux-system
spec:
  parentRefs:
    - name: internal
      namespace: main-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: https-fluxcd
  hostnames:
    - "fluxcd.mgmt.yuriy-lab.cloud"
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
